# freestandoom

./: .gitmodules  CMakeLists.txt  configure.cmake  dg.c  module.c
cmake/Modules/Platform/: Yuniwarp.cmake
doomgeneric/: d_loop.c  d_main.c  doomgeneric.c  i_system.c  i_timer.c  i_video.c
host-common/: callwasm.c
host-vnc/: main.c
iopkt/common/: iopkt-host.h  iopkt.h
iopkt/host/: host-cstdio.c
proxylibc/sysroot/include/: assert.h  ctype.h  errno.h  inttypes.h  math.h  stddef.h  stdio.h  stdlib.h  string.h  strings.h
proxylibc/sysroot/include/sys/: stat.h
